--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
           package="com.example.bianca.appfood">
-    <uses-permission
-            android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-           android:maxSdkVersion="18" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
             android:allowBackup="true"
@@ -14,7 +14,7 @@
             android:theme="@style/AppTheme"
             tools:ignore= "GoogleAppIndexingWarning">
 
-        <activity android:name=".ListaFood"
+        <activity android:name=".scenarios.ListaFood"
                    android:label="Alimentos">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
